Correct header spacing in pixels

--- a/docs/www/style.css
+++ b/docs/www/style.css
@@ -38,6 +38,7 @@ hr.divider {
 
 .logo-img {
 	padding-left: 26px;
+	padding-top: 6px;
 }
 
 .header-container {
@@ -76,8 +77,8 @@ footer {
 }
 
 header {
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 6px;
+	padding-bottom: 6px;
 	background: #e6f9e6;
 }
 
